--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,9 @@
 plugins {
     id 'java'
+    id 'application'
 }
 
-group = 'ru.itone'
+group = 'ru.alexis'
 version = '1.0'
 
 repositories {
@@ -12,8 +13,29 @@ repositories {
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+
+    implementation 'org.slf4j:slf4j-api:2.0.17'
+    implementation 'ch.qos.logback:logback-classic:1.5.24'
 }
 
 test {
     useJUnitPlatform()
+}
+
+ext {
+    mainClassName = "ru.alexis.Main"
+}
+
+jar {
+    archiveBaseName.set("data-filter-util")
+    archiveVersion.set("")
+    manifest {
+        attributes(
+                'Main-Class': mainClassName
+        )
+    }
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 }
